fix: [components] hooks version ie11 + удалил svg fonts

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -11,8 +11,7 @@
   src: url('~@openvtb/fonts/VTBGroupUI-Light/VTBGroupUI-Light.eot?#iefix') format('embedded-opentype'),
     url('~@openvtb/fonts/VTBGroupUI-Light/VTBGroupUI-Light.woff2') format('woff2'),
     url('~@openvtb/fonts/VTBGroupUI-Light/VTBGroupUI-Light.woff') format('woff'),
-    url('~@openvtb/fonts/VTBGroupUI-Light/VTBGroupUI-Light.ttf') format('truetype'),
-    url('~@openvtb/fonts/VTBGroupUI-Light/VTBGroupUI-Light.svg#VTBGroupUIWeb-Light') format('svg');
+    url('~@openvtb/fonts/VTBGroupUI-Light/VTBGroupUI-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
@@ -23,8 +22,7 @@
   src: url('~@openvtb/fonts/VTBGroupUI-Regular/VTBGroupUI-Regular.eot?#iefix') format('embedded-opentype'),
     url('~@openvtb/fonts/VTBGroupUI-Regular/VTBGroupUI-Regular.woff2') format('woff2'),
     url('~@openvtb/fonts/VTBGroupUI-Regular/VTBGroupUI-Regular.woff') format('woff'),
-    url('~@openvtb/fonts/VTBGroupUI-Regular/VTBGroupUI-Regular.ttf') format('truetype'),
-    url('~@openvtb/fonts/VTBGroupUI-Regular/VTBGroupUI-Regular.svg#VTBGroupUIWeb-Regular') format('svg');
+    url('~@openvtb/fonts/VTBGroupUI-Regular/VTBGroupUI-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
@@ -35,8 +33,7 @@
   src: url('~@openvtb/fonts/VTBGroupUI-Medium/VTBGroupUI-Medium.eot?#iefix') format('embedded-opentype'),
     url('~@openvtb/fonts/VTBGroupUI-Medium/VTBGroupUI-Medium.woff2') format('woff2'),
     url('~@openvtb/fonts/VTBGroupUI-Medium/VTBGroupUI-Medium.woff') format('woff'),
-    url('~@openvtb/fonts/VTBGroupUI-Medium/VTBGroupUI-Medium.ttf') format('truetype'),
-    url('~@openvtb/fonts/VTBGroupUI-Medium/VTBGroupUI-Medium.svg#VTBGroupUIWeb-Medium') format('svg');
+    url('~@openvtb/fonts/VTBGroupUI-Medium/VTBGroupUI-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
@@ -47,8 +44,7 @@
   src: url('~@openvtb/fonts/VTBGroupUI-DemiBold/VTBGroupUI-DemiBold.eot?#iefix') format('embedded-opentype'),
     url('~@openvtb/fonts/VTBGroupUI-DemiBold/VTBGroupUI-DemiBold.woff2') format('woff2'),
     url('~@openvtb/fonts/VTBGroupUI-DemiBold/VTBGroupUI-DemiBold.woff') format('woff'),
-    url('~@openvtb/fonts/VTBGroupUI-DemiBold/VTBGroupUI-DemiBold.ttf') format('truetype'),
-    url('~@openvtb/fonts/VTBGroupUI-DemiBold/VTBGroupUI-DemiBold.svg#VTBGroupUIWeb-DemiBold') format('svg');
+    url('~@openvtb/fonts/VTBGroupUI-DemiBold/VTBGroupUI-DemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
@@ -59,8 +55,7 @@
   src: url('~@openvtb/fonts/VTBGroupUI-SemiBold/VTBGroupUI-SemiBold.eot?#iefix') format('embedded-opentype'),
     url('~@openvtb/fonts/VTBGroupUI-SemiBold/VTBGroupUI-SemiBold.woff2') format('woff2'),
     url('~@openvtb/fonts/VTBGroupUI-SemiBold/VTBGroupUI-SemiBold.woff') format('woff'),
-    url('~@openvtb/fonts/VTBGroupUI-SemiBold/VTBGroupUI-SemiBold.ttf') format('truetype'),
-    url('~@openvtb/fonts/VTBGroupUI-SemiBold/VTBGroupUI-SemiBold.svg#VTBGroupUIWeb-SemiBold') format('svg');
+    url('~@openvtb/fonts/VTBGroupUI-SemiBold/VTBGroupUI-SemiBold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
@@ -71,8 +66,7 @@
   src: url('~@openvtb/fonts/VTBGroupUI-Bold/VTBGroupUI-Bold.eot?#iefix') format('embedded-opentype'),
     url('~@openvtb/fonts/VTBGroupUI-Bold/VTBGroupUI-Bold.woff2') format('woff2'),
     url('~@openvtb/fonts/VTBGroupUI-Bold/VTBGroupUI-Bold.woff') format('woff'),
-    url('~@openvtb/fonts/VTBGroupUI-Bold/VTBGroupUI-Bold.ttf') format('truetype'),
-    url('~@openvtb/fonts/VTBGroupUI-Bold/VTBGroupUI-Bold.svg#VTBGroupUIWeb-Bold') format('svg');
+    url('~@openvtb/fonts/VTBGroupUI-Bold/VTBGroupUI-Bold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
